--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
         /* 기준 환율 필드 */
         #exchangeRate {
-            width: 100%;
+            width: 100%; /* 너비를 100%로 유지 */
         }
         input:focus {
             border-color: #007bff;
@@ -109,7 +109,7 @@
     </div>
 
     <script>
-        // JavaScript: 계산 로직
+        // JavaScript: 계산 로직 (기존 로직 그대로 유지)
         document.addEventListener('DOMContentLoaded', () => {
             // 1. DOM 요소 가져오기
             const rateInput = document.getElementById('exchangeRate');
