--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
         <div class="input-group">
             <label for="exchangeRate">기준 환율 (왼쪽 통화 1단위당 오른쪽 통화 금액)</label>
-            <input type="number" id="exchangeRate" value="1000" min="0.01" step="0.01">
+            <input type="number" id="exchangeRate" value="1000" min="0.01" step="0.01" 
+                   placeholder="USD 1이면 KRW 1456 입력">
         </div>
 
         <hr>
