--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기본 환율 계산기 (통화 좌측)</title>
+    <title>환율 계산기</title>
     
     <style>
         /* CSS: 스타일링 */
