--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>기본 환율 계산기 💵</h2>
+        <h2>환율 계산기</h2>
 
         <div class="input-group">
             <label for="exchangeRate">기준 환율 (왼쪽 통화 1단위당 오른쪽 통화 금액)</label>
